--- a/example_1_html/index.html
+++ b/example_1_html/index.html
@@ -36,6 +36,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h1>Welcome ReDi School!</h1>
+					<p>Hello</p>
 					<p>I hope this lets you see how you can quickly host a website using docker<br />
 					and using "Infrastructure as Code" techniques locally, you can improve your development environment</p>
 				</div>
